--- a/html-css/modul-03/index.html
+++ b/html-css/modul-03/index.html
@@ -8,21 +8,67 @@
 
 </head>
 <body>
-<
 
-<wrapper>
+
+<div class="wrapper">
     <div class="one">
     <h2>AGENCY PROFILE</h2>
-    <img src="img/1.jpg" alt="foto">
+    <img src="img/33.jpg" alt="foto">
+ <p><b>Gellentesque imperdiet gerti loki holewvelit. Ut vestibulum mi sit amet ornare.</b></p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe sit ullam unde? Accusantium, aliquid beatae, eligendi ipsa iusto laudantium nulla quasi saepe sint voluptates voluptatibus voluptatum. A ab ad aliquam aperiam assumenda consequatur consequuntur corporis culpa debitis dicta dolores earum eos est hic inventore iste iure laudantium maiores, molestias nemo nostrum odio officiis provident quae quaerat quas quia quisquam, quod reiciendis repellat repellendus sapiente totam unde voluptas voluptate voluptatem voluptates. Accusantium debitis est expedita facere ipsam maiores minus, necessitatibus porro sed sit, unde vitae, </p>
+    </div>
+
+    <div class="one">
+        <h2>OUR PRINCIPELS</h2>
+
         <p><b>Gellentesque imperdiet gerti loki holewvelit. Ut vestibulum mi sit amet ornare.</b></p>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe sit ullam unde? Accusantium, aliquid beatae, eligendi ipsa iusto laudantium nulla quasi saepe sint voluptates voluptatibus voluptatum. A ab ad aliquam aperiam assumenda consequatur consequuntur corporis culpa debitis dicta dolores earum eos est hic inventore iste iure laudantium maiores, molestias nemo nostrum odio officiis provident quae quaerat quas quia quisquam, quod reiciendis repellat repellendus sapiente totam unde voluptas voluptate voluptatem voluptates. Accusantium debitis est expedita facere ipsam maiores minus, necessitatibus porro sed sit, unde vitae, voluptate voluptatum! Aliquid magnam quaerat repudiandae rerum tenetur. Ab accusamus adipisci amet consequuntur dolor dolore ea eveniet exercitationem impedit iste laborum molestias, mollitia natus necessitatibus non nostrum nulla numquam odio odit officiis omnis quas quia quis quisquam reiciendis repellat</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe sit ullam unde? Accusantium, aliquid beatae, eligendi ipsa iusto laudantium nulla quasi saepe sint voluptates voluptatibus voluptatum. A ab ad aliquam aperiam assumenda consequatur consequuntur corporis culpa debitis dicta dolores earum eos est  </p>
+
+        <p><b>Gellentesque imperdiet gerti loki holewvelit. Ut vestibulum mi sit amet ornare.</b></p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe sit ullam unde? Accusantium, aliquid beatae, eligendi ipsa iusto laudantium nulla quasi saepe sint voluptates voluptatibus voluptatum. A ab ad aliquam aperiam assumenda consequatur consequuntur corporis culpa debitis dicta dolores earum eos est </p>
+
+        <p><b>Gellentesque imperdiet gerti loki holewvelit. Ut vestibulum mi sit amet ornare.</b></p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe sit ullam unde? Accusantium, aliquid beatae, eligendi ipsa iusto laudantium nulla quasi saepe sint voluptates voluptatibus voluptatum. A ab ad aliquam aperiam assumenda consequatur consequuntur corporis culpa debitis dicta dolores earum eos est
+
+</div>
+
+    <div class="offer">
+        <h2>WHAT WE OFFER</h2>
+
+        <p><b>Gellentesque imperdiet gerti loki holewvelit. Ut vestibulum mi sit amet ornare.</b></p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe sit ullam unde? Accusantium, aliquid beatae, eligendi ipsa iusto laudantium nulla quasi saepe sint voluptates voluptatibus voluptatum. A ab ad aliquam aperiam assumenda consequatur consequuntur corporis culpa debitis dicta dolores earum eos est  </p>
+    </div>
+
+        <div class="list">
+            <ul class="one">
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem ipsum dolor</li>
+            </ul>
+            <ul class="two">
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem ipsum dolor</li>
+
+            </ul>
+        </div>
 </div>
 
 
-    </div>
 
-</wrapper>
+
+
+
+
 
 
 
